# test-baz

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
gendiff/: build_diff.py  cli.py  compare.py  config.py  differ.py  parser.py
gendiff/data/: get_data.py
gendiff/scripts/: gendiff.py
