[tool.poetry]
name = "test-baz"
version = "0.1.0"
description = ""
authors = ["enimalojd <enderston8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
